@@ -307,9 +307,6 @@
      2017- 5- 3 difficult as 1/ footer is aligned with header,
                 and 2/ expands on two lines
 
-1469 2017- 4-18 entry page ext filter: when a row is moved up or down,
-                review sensitivity of and/or combobox
-
 1470
 
 -----------------------------------------------------------------------
@@ -1155,6 +1152,10 @@
 1468 2017- 4-18 review delete entry user confirm dialog layout
                 have a horiz. separarator
      2017- 4-21 fixed
+
+1469 2017- 4-18 entry page ext filter: when a row is moved up or down,
+                review sensitivity of and/or combobox
+     2017- 5- 3 fixed
 
 -----------------------------------------------------------------------
  P. Wieser - Created on 2014, may 2nd
